# test002

./: ARCHITECTURE_SUMMARY.md  ARINC839_SESSION_ACTIVATION_CONDITIONS.md  CIC_COMPLETION_REPORT.md  CMakeLists.txt  DLM_ARCHITECTURE.md  DLM_OVERVIEW.md  LMI_ISSUE_DIAGNOSIS.md  MAGIC_CLIENT_TEST_GUIDE.md  MAGIC策略引擎说明.md  MAGIC系统测试指导.md  MAGIC配置说明.md  MIH_MIGRATION_PLAN.md  MIH_PROTOCOL_REVIEW.md  Makefile.dlm  Makefile.magic  Makefile.magic_core  NO_LINK_RESOURCES_SOLUTION.md  README.md  README_DLM_CM.md  README_MAGIC_XML.md  README_POLICY_ENGINE.md  TESTING_GUIDE.md  TFT_3GPP_FORMAT_GUIDE.md  TFT_WHITELIST_COMPLIANCE_REPORT.md  TFT_WHITELIST_TEST_GUIDE.md  acl_wl.fdx  app_magic.fdx  check_dataplane.sh  check_lmi_status.sh  check_magic_status.sh  cleanup_report_20251028_100730.txt  cleanup_script.sh  conservative_cleanup_report_20251028_101515.txt  control_demo.sh  cross_platform_distributed_deployment_guide.md  dbg_dict_dump.fdx  dbg_loglevel.fdx  dbg_monitor.fdx  dbg_msg_dumps.fdx  dbg_msg_timings.fdx  (+27 more)
DLM_CELLULAR/: README.md  build_standard.sh  dlm_cellular_proto  dlm_cellular_prototype.c  dlm_cellular_standard  dlm_cellular_standard.c
DLM_COMMON/: dlm_common.h  dlm_config_parser.h
DLM_CONFIG/: dlm_cellular.ini  dlm_satcom.ini  dlm_wifi.ini
DLM_SATCOM/: README.md  build_standard.sh  dlm_satcom_proto  dlm_satcom_prototype.c  dlm_satcom_standard  dlm_satcom_standard.c
DLM_WIFI/: README.md  build_standard.sh  dlm_wifi_proto  dlm_wifi_prototype  dlm_wifi_prototype.c  dlm_wifi_standard  dlm_wifi_standard.c
MIHF_SIMULATOR/: README.md  mihf_sim  mihf_simulator.c
_backup_magic_server_20251125_154736/: BUILD_GUIDE.md  CMakeLists.txt  README_CODE_STRUCTURE.md  cm_core_simple.c  dlm_common.c  dlm_common.h  ipc_protocol.h  magic_core_main.c  policy_engine.c  policy_engine.h  quick_build.sh  test_policy_engine.c  test_xml_parser.c  xml_config_parser.c  xml_config_parser.h
_backup_magic_server_20251125_154736/cm_core/: cm_core_server.c
_backup_magic_server_20251125_154736/config/: Central_Policy_Profile.xml  Client_Profile.xml  DLM.txt  Datalink_Profile.xml
_backup_magic_server_20251125_154736/lmi/: README_LMI_DLM.md  lmi_test_example.c  magic_ipc_utils.c  magic_lmi.h  magic_lmi_utils.c
_backup_old_implementation_20251021_170916/: magic_server_test.conf
_backup_old_implementation_20251021_170916/magic_server/: CMakeLists.txt  meginc系统.txt
_backup_old_implementation_20251021_170916/magic_server/config/: magic_server.conf
_backup_old_implementation_20251021_170916/magic_server/include/: magic_common.h
_backup_old_implementation_20251021_170916/magic_server/include/cic/: magic_cic.h
_backup_old_implementation_20251021_170916/magic_server/include/cm/: magic_cm.h
_backup_old_implementation_20251021_170916/magic_server/include/dlm/: magic_dlm.h
_backup_old_implementation_20251021_170916/magic_server/include/netmgmt/: magic_netmgmt.h
_backup_old_implementation_20251021_170916/magic_server/include/utils/: magic_config.h
_backup_old_implementation_20251021_170916/magic_server/src/: magic_server.c
_backup_old_implementation_20251021_170916/magic_server/src/cic/: magic_cic.c
_backup_old_implementation_20251021_170916/magic_server/src/cm/: magic_cm.c
_backup_old_implementation_20251021_170916/magic_server/src/dlm/: magic_dlm.c
_backup_old_implementation_20251021_170916/magic_server/src/netmgmt/: magic_netmgmt.c
_backup_old_implementation_20251021_170916/magic_server/src/utils/: magic_config.c
_backup_old_ipc_protocol/: magic_ipc_protocol.h
acl_wl/: CMakeLists.txt
adif_simulator/: ADIF_SIMULATOR_DESIGN.md  CMakeLists.txt  README.md  adif_simulator.c
app_acct/: CMakeLists.txt
app_magic/: APP_MAGIC_COMPLETION_REPORT.md  CMakeLists.txt  GROUPED_AVP_USAGE.md  IMPLEMENTATION_SUMMARY.md  LMI_COMPLIANCE_REPORT.md  MAGIC_GROUP_AVP_SIMPLE_README.md  add_avp.h  app_magic.c  app_magic.h  dlm_common.h  magic_adif.c  magic_adif.h  magic_cdr.c  magic_cdr.h  magic_cic.c  magic_cic.h  magic_cic_push.c  magic_cic_push.h  magic_client.conf  magic_config.c  magic_config.h  magic_dataplane.c  magic_dataplane.h  magic_dict_handles.c  magic_dict_handles.h  magic_error_codes.h  magic_group_avp_add.c  magic_group_avp_add.h  magic_group_avp_simple.c  magic_group_avp_simple.h  magic_lmi.c  magic_lmi.h  magic_napt_validator.c  magic_napt_validator.h  magic_policy.c  magic_policy.h  magic_session.c  magic_session.h  magic_tft_validator.c  magic_tft_validator.h
app_magic/config/: Client_Profile.xml  Client_Profile.xml.backup_20251224_175239  Datalink_Profile.xml
app_radgw/: CMakeLists.txt
app_redirect/: CMakeLists.txt
app_sip/: CMakeLists.txt
cert/: README.md  ca.ext  ca.srl  client.csr  client.ext  magic-server.ext  server.csr
dbg_loglevel/: CMakeLists.txt
dict_json/: CMakeLists.txt
dict_legacy_xml/: CMakeLists.txt
dict_magic_839/: CMakeLists.txt  COMPLETION_SUMMARY.md  DICT_CHECK_REPORT.md  IMPROVEMENTS_COMPLETED.md  README.md  SUMMARY.md  USAGE_GUIDE.md  add_avps.c  dict_magic.c  dict_magic_839.csv  dict_magic_codes.c  dict_magic_codes.h  verify_improvements.sh
exe/: acl_wl.fdx  dbg_dict_dump.fdx  dbg_loglevel.fdx  dbg_monitor.fdx  dbg_msg_dumps.fdx  dbg_msg_timings.fdx  dbg_rt.fdx  dict_dcca.fdx  dict_dcca_3gpp.fdx  dict_dcca_starent.fdx  dict_eap.fdx  dict_mip6a.fdx  dict_mip6i.fdx  dict_nas_mipv6.fdx  dict_nasreq.fdx  dict_rfc5777.fdx  dict_sip.fdx  rt_busypeers.fdx  rt_default.fdx  rt_deny_by_size.fdx  rt_ignore_dh.fdx  rt_load_balance.fdx  rt_randomize.fdx  (+4 more)
magic_client/: CLI_USAGE_GUIDE.md  CMakeLists.txt  DartConfiguration.tcl  EFB_magic.conf  MCAR_MCCR_TESTING_GUIDE.md  MCCR_MEDIA_INDEPENDENCE_UPDATE.md  QUICK_START.md  add_avp.h  cabin_magic.conf  cli_interface.c  cli_interface.h  config.c  config.h  link_control_magic.c  log.h  magic_client.c  magic_client.conf  magic_commands.c  magic_commands.h  magic_dataplane.c  magic_dataplane.h  magic_dict_handles.c  magic_dict_handles.h  magic_group_avp_add.c  magic_group_avp_add.h  magic_lmi.h  maint_magic.conf  pax_magic.conf  session_manager.c  session_manager.h  udp_test.c  udp_test.h  客户端使用指南.md
(+177 files in other folders)
